updated feature commit

--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@
   #education {
     padding: 50px;
   }
+  #certification {
+    padding: 50px;
+  }
   
   table {
     border-collapse: collapse;
